
[TestConstructorDeclarations/simple_constructor - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Point",
                span: 14-19,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.ConstructorDecl{
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "x",
                                span: 34-35,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 37-43,
                            },
                            span: 34-43,
                        },
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "y",
                                span: 45-46,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 48-54,
                            },
                            span: 45-54,
                        },
                    },
                    span: 22-54,
                },
            },
            declare: true,
            span: 8-57,
        },
    },
}
---

[TestConstructorDeclarations/constructor_with_no_parameters - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Empty",
                span: 14-19,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.ConstructorDecl{
                    span: 22-33,
                },
            },
            declare: true,
            span: 8-37,
        },
    },
}
---

[TestConstructorDeclarations/constructor_with_optional_parameters - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Config",
                span: 14-20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.ConstructorDecl{
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "host",
                                span: 35-39,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 6,
                                span: 41-47,
                            },
                            span: 35-47,
                        },
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "port",
                                span: 49-53,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 56-62,
                            },
                            Optional: true,
                            span: 49-62,
                        },
                    },
                    span: 23-62,
                },
            },
            declare: true,
            span: 8-65,
        },
    },
}
---

[TestConstructorDeclarations/constructor_with_rest_parameters - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Variadic",
                span: 14-22,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.ConstructorDecl{
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "args",
                                span: 40-44,
                            },
                            Type: &dts_parser.ArrayType{
                                ElementType: &dts_parser.PrimitiveType{
                                    span: 46-49,
                                },
                                span: 46-51,
                            },
                            Rest: true,
                            span: 37-51,
                        },
                    },
                    span: 25-51,
                },
            },
            declare: true,
            span: 8-54,
        },
    },
}
---

[TestConstructorDeclarations/public_constructor - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "PublicCtor",
                span: 14-24,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.ConstructorDecl{
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "x",
                                span: 46-47,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 49-55,
                            },
                            span: 46-55,
                        },
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                    },
                    span: 34-55,
                },
            },
            declare: true,
            span: 8-58,
        },
    },
}
---

[TestConstructorDeclarations/protected_constructor - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "ProtectedCtor",
                span: 14-27,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.ConstructorDecl{
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                    },
                    span: 40-51,
                },
            },
            declare: true,
            span: 8-55,
        },
    },
}
---

[TestConstructorDeclarations/private_constructor - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "PrivateCtor",
                span: 14-25,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.ConstructorDecl{
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                    },
                    span: 36-47,
                },
            },
            declare: true,
            span: 8-51,
        },
    },
}
---

[TestPropertyDeclarations/simple_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Person",
                span: 14-20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "name",
                        span: 23-27,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 29-35,
                    },
                    span: 23-35,
                },
            },
            declare: true,
            span: 8-37,
        },
    },
}
---

[TestPropertyDeclarations/optional_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Config",
                span: 14-20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "port",
                        span: 23-27,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 30-36,
                    },
                    Optional: true,
                    span: 23-36,
                },
            },
            declare: true,
            span: 8-38,
        },
    },
}
---

[TestPropertyDeclarations/readonly_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Immutable",
                span: 14-23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "id",
                        span: 35-37,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 39-45,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Readonly: true,
                    },
                    span: 35-45,
                },
            },
            declare: true,
            span: 8-47,
        },
    },
}
---

[TestPropertyDeclarations/static_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Utils",
                span: 14-19,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "version",
                        span: 29-36,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 38-44,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                    },
                    span: 29-44,
                },
            },
            declare: true,
            span: 8-46,
        },
    },
}
---

[TestPropertyDeclarations/public_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Public",
                span: 14-20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "name",
                        span: 30-34,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 36-42,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                    },
                    span: 30-42,
                },
            },
            declare: true,
            span: 8-44,
        },
    },
}
---

[TestPropertyDeclarations/private_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Private",
                span: 14-21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "secret",
                        span: 32-38,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 40-46,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                    },
                    span: 32-46,
                },
            },
            declare: true,
            span: 8-48,
        },
    },
}
---

[TestPropertyDeclarations/protected_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Protected",
                span: 14-23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "value",
                        span: 36-41,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 43-49,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                    },
                    span: 36-49,
                },
            },
            declare: true,
            span: 8-51,
        },
    },
}
---

[TestPropertyDeclarations/static_readonly_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Constants",
                span: 14-23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "PI",
                        span: 42-44,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 46-52,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                        Readonly: true,
                    },
                    span: 42-52,
                },
            },
            declare: true,
            span: 8-54,
        },
    },
}
---

[TestPropertyDeclarations/public_readonly_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Readonly",
                span: 14-22,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "id",
                        span: 41-43,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 45-51,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                        Readonly: true,
                    },
                    span: 41-51,
                },
            },
            declare: true,
            span: 8-53,
        },
    },
}
---

[TestPropertyDeclarations/property_with_no_type_annotation - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Untyped",
                span: 14-21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "prop",
                        span: 24-28,
                    },
                    span: 24-28,
                },
            },
            declare: true,
            span: 8-30,
        },
    },
}
---

[TestPropertyDeclarations/property_with_string_literal_name - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "StringKey",
                span: 14-23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.StringLiteral{
                        Value: "my-prop",
                        span: 26-35,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 37-43,
                    },
                    span: 26-43,
                },
            },
            declare: true,
            span: 8-45,
        },
    },
}
---

[TestPropertyDeclarations/property_with_number_literal_name - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "NumberKey",
                span: 14-23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.NumberLiteral{
                        Value: 42,
                        span: 26-28,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 30-36,
                    },
                    span: 26-36,
                },
            },
            declare: true,
            span: 8-38,
        },
    },
}
---

[TestPropertyDeclarations/property_with_computed_name - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Computed",
                span: 14-22,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "iterator",
                        span: 33-41,
                    },
                    span: 33-41,
                },
            },
            declare: true,
            span: 8-49,
        },
    },
}
---

[TestMethodDeclarations/simple_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Calculator",
                span: 14-24,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "add",
                        span: 27-30,
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "a",
                                span: 31-32,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 34-40,
                            },
                            span: 31-40,
                        },
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "b",
                                span: 42-43,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 45-51,
                            },
                            span: 42-51,
                        },
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 54-60,
                    },
                    span: 27-60,
                },
            },
            declare: true,
            span: 8-62,
        },
    },
}
---

[TestMethodDeclarations/method_with_no_parameters - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Logger",
                span: 14-20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "log",
                        span: 23-26,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 30-34,
                    },
                    span: 23-34,
                },
            },
            declare: true,
            span: 8-36,
        },
    },
}
---

[TestMethodDeclarations/method_with_optional_parameters - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Printer",
                span: 14-21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "print",
                        span: 24-29,
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "msg",
                                span: 30-33,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 6,
                                span: 35-41,
                            },
                            span: 30-41,
                        },
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "times",
                                span: 43-48,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 51-57,
                            },
                            Optional: true,
                            span: 43-57,
                        },
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 60-64,
                    },
                    span: 24-64,
                },
            },
            declare: true,
            span: 8-66,
        },
    },
}
---

[TestMethodDeclarations/method_with_rest_parameters - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Sum",
                span: 14-17,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "sum",
                        span: 20-23,
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "nums",
                                span: 27-31,
                            },
                            Type: &dts_parser.ArrayType{
                                ElementType: &dts_parser.PrimitiveType{
                                    Kind: 7,
                                    span: 33-39,
                                },
                                span: 33-41,
                            },
                            Rest: true,
                            span: 24-41,
                        },
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 44-50,
                    },
                    span: 20-50,
                },
            },
            declare: true,
            span: 8-52,
        },
    },
}
---

[TestMethodDeclarations/optional_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Optional",
                span: 14-22,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "method",
                        span: 25-31,
                    },
                    Optional: true,
                    span: 25-31,
                },
            },
            declare: true,
            span: 8-42,
        },
    },
}
---

[TestMethodDeclarations/static_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Utils",
                span: 14-19,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "parse",
                        span: 29-34,
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "str",
                                span: 35-38,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 6,
                                span: 40-46,
                            },
                            span: 35-46,
                        },
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 12,
                        span: 49-55,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                    },
                    span: 29-55,
                },
            },
            declare: true,
            span: 8-57,
        },
    },
}
---

[TestMethodDeclarations/public_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Public",
                span: 14-20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "greet",
                        span: 30-35,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 39-43,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                    },
                    span: 30-43,
                },
            },
            declare: true,
            span: 8-45,
        },
    },
}
---

[TestMethodDeclarations/private_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Private",
                span: 14-21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "encrypt",
                        span: 32-39,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 43-49,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                    },
                    span: 32-49,
                },
            },
            declare: true,
            span: 8-51,
        },
    },
}
---

[TestMethodDeclarations/protected_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Protected",
                span: 14-23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "init",
                        span: 36-40,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 44-48,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                    },
                    span: 36-48,
                },
            },
            declare: true,
            span: 8-50,
        },
    },
}
---

[TestMethodDeclarations/abstract_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Abstract",
                span: 23-31,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "render",
                        span: 43-49,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 53-57,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Abstract: true,
                    },
                    span: 43-57,
                },
            },
            Abstract: true,
            declare: true,
            span: 17-59,
        },
    },
}
---

[TestMethodDeclarations/async_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Async",
                span: 14-19,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "fetch",
                        span: 28-33,
                    },
                    ReturnType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Promise",
                            span: 37-44,
                        },
                        TypeArgs: []dts_parser.TypeAnn{
                            &dts_parser.PrimitiveType{
                                span: 45-48,
                            },
                        },
                        span: 37-49,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Async: true,
                    },
                    span: 28-49,
                },
            },
            declare: true,
            span: 8-51,
        },
    },
}
---

[TestMethodDeclarations/method_with_type_parameters - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Generic",
                span: 14-21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "map",
                        span: 24-27,
                    },
                    TypeParams: []*dts_parser.TypeParam{
                        &dts_parser.TypeParam{
                            Name: &dts_parser.Ident{
                                Name: "T",
                                span: 28-29,
                            },
                            span: 28-29,
                        },
                        &dts_parser.TypeParam{
                            Name: &dts_parser.Ident{
                                Name: "U",
                                span: 31-32,
                            },
                            span: 31-32,
                        },
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "fn",
                                span: 34-36,
                            },
                            Type: &dts_parser.FunctionType{
                                Params: []*dts_parser.Param{
                                    &dts_parser.Param{
                                        Name: &dts_parser.Ident{
                                            Name: "x",
                                            span: 39-40,
                                        },
                                        Type: &dts_parser.TypeReference{
                                            Name: &dts_parser.Ident{
                                                Name: "T",
                                                span: 42-43,
                                            },
                                            span: 42-43,
                                        },
                                        span: 39-43,
                                    },
                                },
                                ReturnType: &dts_parser.TypeReference{
                                    Name: &dts_parser.Ident{
                                        Name: "U",
                                        span: 48-49,
                                    },
                                    span: 48-49,
                                },
                                span: 38-49,
                            },
                            span: 34-49,
                        },
                    },
                    ReturnType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "U",
                            span: 52-53,
                        },
                        span: 52-53,
                    },
                    span: 24-53,
                },
            },
            declare: true,
            span: 8-55,
        },
    },
}
---

[TestMethodDeclarations/method_with_type_parameters_and_constraints - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Constrained",
                span: 14-25,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "process",
                        span: 28-35,
                    },
                    TypeParams: []*dts_parser.TypeParam{
                        &dts_parser.TypeParam{
                            Name: &dts_parser.Ident{
                                Name: "T",
                                span: 36-37,
                            },
                            Constraint: &dts_parser.PrimitiveType{
                                Kind: 12,
                                span: 46-52,
                            },
                            span: 36-52,
                        },
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "obj",
                                span: 54-57,
                            },
                            Type: &dts_parser.TypeReference{
                                Name: &dts_parser.Ident{
                                    Name: "T",
                                    span: 59-60,
                                },
                                span: 59-60,
                            },
                            span: 54-60,
                        },
                    },
                    ReturnType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "T",
                            span: 63-64,
                        },
                        span: 63-64,
                    },
                    span: 28-64,
                },
            },
            declare: true,
            span: 8-66,
        },
    },
}
---

[TestMethodDeclarations/static_abstract_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "StaticAbstract",
                span: 23-37,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "create",
                        span: 56-62,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        span: 66-69,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                        Abstract: true,
                    },
                    span: 56-69,
                },
            },
            Abstract: true,
            declare: true,
            span: 17-71,
        },
    },
}
---

[TestMethodDeclarations/public_static_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "PublicStatic",
                span: 14-26,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "getInstance",
                        span: 43-54,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        span: 58-61,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                        Static: true,
                    },
                    span: 43-61,
                },
            },
            declare: true,
            span: 8-63,
        },
    },
}
---

[TestMethodDeclarations/method_with_no_return_type - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "NoReturn",
                span: 14-22,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "doSomething",
                        span: 25-36,
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "x",
                                span: 37-38,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 40-46,
                            },
                            span: 37-46,
                        },
                    },
                    span: 25-46,
                },
            },
            declare: true,
            span: 8-49,
        },
    },
}
---

[TestMethodDeclarations/method_with_computed_name - 1]
&dts_parser.Module{}
---

[TestGetterAndSetterDeclarations/simple_getter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Person",
                span: 14-20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.GetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "name",
                        span: 27-31,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 35-41,
                    },
                    span: 23-41,
                },
            },
            declare: true,
            span: 8-43,
        },
    },
}
---

[TestGetterAndSetterDeclarations/simple_setter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Person",
                span: 14-20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.SetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "name",
                        span: 27-31,
                    },
                    Param: &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "value",
                            span: 32-37,
                        },
                        Type: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 39-45,
                        },
                        span: 32-45,
                    },
                    span: 23-45,
                },
            },
            declare: true,
            span: 8-48,
        },
    },
}
---

[TestGetterAndSetterDeclarations/getter_and_setter_pair - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Person",
                span: 14-20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.GetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "name",
                        span: 27-31,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 35-41,
                    },
                    span: 23-41,
                },
                &dts_parser.SetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "name",
                        span: 47-51,
                    },
                    Param: &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "value",
                            span: 52-57,
                        },
                        Type: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 59-65,
                        },
                        span: 52-65,
                    },
                    span: 43-65,
                },
            },
            declare: true,
            span: 8-68,
        },
    },
}
---

[TestGetterAndSetterDeclarations/static_getter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Config",
                span: 14-20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.GetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "instance",
                        span: 34-42,
                    },
                    ReturnType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Config",
                            span: 46-52,
                        },
                        span: 46-52,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                    },
                    span: 30-52,
                },
            },
            declare: true,
            span: 8-54,
        },
    },
}
---

[TestGetterAndSetterDeclarations/static_setter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Config",
                span: 14-20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.SetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "instance",
                        span: 34-42,
                    },
                    Param: &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "value",
                            span: 43-48,
                        },
                        Type: &dts_parser.TypeReference{
                            Name: &dts_parser.Ident{
                                Name: "Config",
                                span: 50-56,
                            },
                            span: 50-56,
                        },
                        span: 43-56,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                    },
                    span: 30-56,
                },
            },
            declare: true,
            span: 8-59,
        },
    },
}
---

[TestGetterAndSetterDeclarations/public_getter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Public",
                span: 14-20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.GetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "value",
                        span: 34-39,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 43-49,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                    },
                    span: 30-49,
                },
            },
            declare: true,
            span: 8-51,
        },
    },
}
---

[TestGetterAndSetterDeclarations/private_getter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Private",
                span: 14-21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.GetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "secret",
                        span: 36-42,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 46-52,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                    },
                    span: 32-52,
                },
            },
            declare: true,
            span: 8-54,
        },
    },
}
---

[TestGetterAndSetterDeclarations/protected_getter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Protected",
                span: 14-23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.GetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "data",
                        span: 40-44,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        span: 48-51,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                    },
                    span: 36-51,
                },
            },
            declare: true,
            span: 8-53,
        },
    },
}
---

[TestGetterAndSetterDeclarations/public_setter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Public",
                span: 14-20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.SetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "value",
                        span: 34-39,
                    },
                    Param: &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "n",
                            span: 40-41,
                        },
                        Type: &dts_parser.PrimitiveType{
                            Kind: 7,
                            span: 43-49,
                        },
                        span: 40-49,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                    },
                    span: 30-49,
                },
            },
            declare: true,
            span: 8-52,
        },
    },
}
---

[TestGetterAndSetterDeclarations/private_setter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Private",
                span: 14-21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.SetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "secret",
                        span: 36-42,
                    },
                    Param: &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "s",
                            span: 43-44,
                        },
                        Type: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 46-52,
                        },
                        span: 43-52,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                    },
                    span: 32-52,
                },
            },
            declare: true,
            span: 8-55,
        },
    },
}
---

[TestGetterAndSetterDeclarations/protected_setter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Protected",
                span: 14-23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.SetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "data",
                        span: 40-44,
                    },
                    Param: &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "d",
                            span: 45-46,
                        },
                        Type: &dts_parser.PrimitiveType{
                            span: 48-51,
                        },
                        span: 45-51,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                    },
                    span: 36-51,
                },
            },
            declare: true,
            span: 8-54,
        },
    },
}
---

[TestGetterAndSetterDeclarations/getter_with_no_return_type - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "NoType",
                span: 14-20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.GetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "value",
                        span: 27-32,
                    },
                    span: 23-32,
                },
            },
            declare: true,
            span: 8-36,
        },
    },
}
---

[TestGetterAndSetterDeclarations/getter_with_computed_name - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Computed",
                span: 14-22,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.GetterDecl{
                    Name: &dts_parser.ComputedKey{
                        Expr: &dts_parser.MemberExpr{
                            Object: &dts_parser.IdentExpr{
                                Name: "Symbol",
                                span: 30-36,
                            },
                            Prop: &dts_parser.Ident{
                                Name: "toStringTag",
                                span: 37-48,
                            },
                            span: 30-48,
                        },
                        span: 29-49,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 53-59,
                    },
                    span: 25-59,
                },
            },
            declare: true,
            span: 8-61,
        },
    },
}
---

[TestGetterAndSetterDeclarations/setter_with_computed_name - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Computed",
                span: 14-22,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.SetterDecl{
                    Name: &dts_parser.ComputedKey{
                        Expr: &dts_parser.MemberExpr{
                            Object: &dts_parser.IdentExpr{
                                Name: "Symbol",
                                span: 30-36,
                            },
                            Prop: &dts_parser.Ident{
                                Name: "toStringTag",
                                span: 37-48,
                            },
                            span: 30-48,
                        },
                        span: 29-49,
                    },
                    Param: &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "value",
                            span: 50-55,
                        },
                        Type: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 57-63,
                        },
                        span: 50-63,
                    },
                    span: 25-63,
                },
            },
            declare: true,
            span: 8-66,
        },
    },
}
---

[TestClassIndexSignatures/string_index_signature - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Dictionary",
                span: 14-24,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.IndexSignature{
                    KeyName: &dts_parser.Ident{
                        Name: "key",
                        span: 28-31,
                    },
                    KeyType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 33-39,
                    },
                    ValueType: &dts_parser.PrimitiveType{
                        span: 42-45,
                    },
                    span: 27-45,
                },
            },
            declare: true,
            span: 8-47,
        },
    },
}
---

[TestClassIndexSignatures/number_index_signature - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Array",
                span: 14-19,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.IndexSignature{
                    KeyName: &dts_parser.Ident{
                        Name: "index",
                        span: 23-28,
                    },
                    KeyType: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 30-36,
                    },
                    ValueType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 39-45,
                    },
                    span: 22-45,
                },
            },
            declare: true,
            span: 8-47,
        },
    },
}
---

[TestClassIndexSignatures/readonly_index_signature - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "ReadonlyDict",
                span: 14-26,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.IndexSignature{
                    KeyName: &dts_parser.Ident{
                        Name: "key",
                        span: 39-42,
                    },
                    KeyType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 44-50,
                    },
                    ValueType: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 53-59,
                    },
                    Readonly: true,
                    span: 38-59,
                },
            },
            declare: true,
            span: 8-61,
        },
    },
}
---

[TestClassIndexSignatures/symbol_index_signature - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "SymbolMap",
                span: 14-23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.IndexSignature{
                    KeyName: &dts_parser.Ident{
                        Name: "sym",
                        span: 27-30,
                    },
                    KeyType: &dts_parser.PrimitiveType{
                        Kind: 10,
                        span: 32-38,
                    },
                    ValueType: &dts_parser.PrimitiveType{
                        Kind: 12,
                        span: 41-47,
                    },
                    span: 26-47,
                },
            },
            declare: true,
            span: 8-49,
        },
    },
}
---

[TestCombinedModifiers/public_static_readonly_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Constants",
                span: 14-23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "MAX",
                        span: 49-52,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 54-60,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                        Static: true,
                        Readonly: true,
                    },
                    span: 49-60,
                },
            },
            declare: true,
            span: 8-62,
        },
    },
}
---

[TestCombinedModifiers/private_static_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Private",
                span: 14-21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "helper",
                        span: 39-45,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 49-53,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                        Static: true,
                    },
                    span: 39-53,
                },
            },
            declare: true,
            span: 8-55,
        },
    },
}
---

[TestCombinedModifiers/protected_readonly_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Protected",
                span: 14-23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "id",
                        span: 45-47,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 49-55,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                        Readonly: true,
                    },
                    span: 45-55,
                },
            },
            declare: true,
            span: 8-57,
        },
    },
}
---

[TestCombinedModifiers/public_abstract_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Abstract",
                span: 23-31,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "render",
                        span: 50-56,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 60-64,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                        Abstract: true,
                    },
                    span: 50-64,
                },
            },
            Abstract: true,
            declare: true,
            span: 17-66,
        },
    },
}
---

[TestCombinedModifiers/protected_static_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Protected",
                span: 14-23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "count",
                        span: 43-48,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 50-56,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                        Static: true,
                    },
                    span: 43-56,
                },
            },
            declare: true,
            span: 8-58,
        },
    },
}
---

[TestCombinedModifiers/public_async_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Async",
                span: 14-19,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "load",
                        span: 35-39,
                    },
                    ReturnType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Promise",
                            span: 43-50,
                        },
                        TypeArgs: []dts_parser.TypeAnn{
                            &dts_parser.PrimitiveType{
                                Kind: 2,
                                span: 51-55,
                            },
                        },
                        span: 43-56,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                        Async: true,
                    },
                    span: 35-56,
                },
            },
            declare: true,
            span: 8-58,
        },
    },
}
---

[TestCombinedModifiers/private_readonly_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Private",
                span: 14-21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "secret",
                        span: 41-47,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 49-55,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                        Readonly: true,
                    },
                    span: 41-55,
                },
            },
            declare: true,
            span: 8-57,
        },
    },
}
---

[TestComplexClasses/class_with_multiple_member_types - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Person",
                span: 14-20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.ConstructorDecl{
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "name",
                                span: 39-43,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 6,
                                span: 45-51,
                            },
                            span: 39-51,
                        },
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "age",
                                span: 53-56,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 58-64,
                            },
                            span: 53-64,
                        },
                    },
                    span: 27-64,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "name",
                        span: 70-74,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 76-82,
                    },
                    span: 70-82,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "age",
                        span: 95-98,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 100-106,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                    },
                    span: 95-106,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "greet",
                        span: 111-116,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 120-124,
                    },
                    span: 111-124,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "create",
                        span: 136-142,
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "name",
                                span: 143-147,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 6,
                                span: 149-155,
                            },
                            span: 143-155,
                        },
                    },
                    ReturnType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Person",
                            span: 158-164,
                        },
                        span: 158-164,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                    },
                    span: 136-164,
                },
                &dts_parser.GetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "fullName",
                        span: 173-181,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 185-191,
                    },
                    span: 169-191,
                },
                &dts_parser.SetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "fullName",
                        span: 200-208,
                    },
                    Param: &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "value",
                            span: 209-214,
                        },
                        Type: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 216-222,
                        },
                        span: 209-222,
                    },
                    span: 196-222,
                },
                &dts_parser.IndexSignature{
                    KeyName: &dts_parser.Ident{
                        Name: "key",
                        span: 229-232,
                    },
                    KeyType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 234-240,
                    },
                    ValueType: &dts_parser.PrimitiveType{
                        span: 243-246,
                    },
                    span: 228-246,
                },
            },
            declare: true,
            span: 8-251,
        },
    },
}
---

[TestComplexClasses/abstract_class_with_abstract_and_concrete_members - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Shape",
                span: 23-28,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "area",
                        span: 44-48,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 52-58,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Abstract: true,
                    },
                    span: 44-58,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "perimeter",
                        span: 72-81,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 85-91,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Abstract: true,
                    },
                    span: 72-91,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "x",
                        span: 106-107,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 109-115,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                    },
                    span: 106-115,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "y",
                        span: 130-131,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 133-139,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                    },
                    span: 130-139,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "move",
                        span: 144-148,
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "dx",
                                span: 149-151,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 153-159,
                            },
                            span: 149-159,
                        },
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "dy",
                                span: 161-163,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 165-171,
                            },
                            span: 161-171,
                        },
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 174-178,
                    },
                    span: 144-178,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "compare",
                        span: 190-197,
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "a",
                                span: 198-199,
                            },
                            Type: &dts_parser.TypeReference{
                                Name: &dts_parser.Ident{
                                    Name: "Shape",
                                    span: 201-206,
                                },
                                span: 201-206,
                            },
                            span: 198-206,
                        },
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "b",
                                span: 208-209,
                            },
                            Type: &dts_parser.TypeReference{
                                Name: &dts_parser.Ident{
                                    Name: "Shape",
                                    span: 211-216,
                                },
                                span: 211-216,
                            },
                            span: 208-216,
                        },
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 8,
                        span: 219-226,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                    },
                    span: 190-226,
                },
            },
            Abstract: true,
            declare: true,
            span: 17-231,
        },
    },
}
---

[TestComplexClasses/class_with_generic_methods - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Container",
                span: 14-23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "add",
                        span: 30-33,
                    },
                    TypeParams: []*dts_parser.TypeParam{
                        &dts_parser.TypeParam{
                            Name: &dts_parser.Ident{
                                Name: "T",
                                span: 34-35,
                            },
                            span: 34-35,
                        },
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "item",
                                span: 37-41,
                            },
                            Type: &dts_parser.TypeReference{
                                Name: &dts_parser.Ident{
                                    Name: "T",
                                    span: 43-44,
                                },
                                span: 43-44,
                            },
                            span: 37-44,
                        },
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 47-51,
                    },
                    span: 30-51,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 60-61,
                    },
                    span: 60-61,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "index",
                        span: 63-68,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 70-76,
                    },
                    span: 63-76,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 79-80,
                    },
                    span: 79-80,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "map",
                        span: 85-88,
                    },
                    TypeParams: []*dts_parser.TypeParam{
                        &dts_parser.TypeParam{
                            Name: &dts_parser.Ident{
                                Name: "T",
                                span: 89-90,
                            },
                            span: 89-90,
                        },
                        &dts_parser.TypeParam{
                            Name: &dts_parser.Ident{
                                Name: "U",
                                span: 92-93,
                            },
                            span: 92-93,
                        },
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "fn",
                                span: 95-97,
                            },
                            Type: &dts_parser.FunctionType{
                                Params: []*dts_parser.Param{
                                    &dts_parser.Param{
                                        Name: &dts_parser.Ident{
                                            Name: "x",
                                            span: 100-101,
                                        },
                                        Type: &dts_parser.TypeReference{
                                            Name: &dts_parser.Ident{
                                                Name: "T",
                                                span: 103-104,
                                            },
                                            span: 103-104,
                                        },
                                        span: 100-104,
                                    },
                                },
                                ReturnType: &dts_parser.TypeReference{
                                    Name: &dts_parser.Ident{
                                        Name: "U",
                                        span: 109-110,
                                    },
                                    span: 109-110,
                                },
                                span: 99-110,
                            },
                            span: 95-110,
                        },
                    },
                    ReturnType: &dts_parser.ArrayType{
                        ElementType: &dts_parser.TypeReference{
                            Name: &dts_parser.Ident{
                                Name: "U",
                                span: 113-114,
                            },
                            span: 113-114,
                        },
                        span: 113-116,
                    },
                    span: 85-116,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "filter",
                        span: 121-127,
                    },
                    TypeParams: []*dts_parser.TypeParam{
                        &dts_parser.TypeParam{
                            Name: &dts_parser.Ident{
                                Name: "T",
                                span: 128-129,
                            },
                            span: 128-129,
                        },
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "predicate",
                                span: 131-140,
                            },
                            Type: &dts_parser.FunctionType{
                                Params: []*dts_parser.Param{
                                    &dts_parser.Param{
                                        Name: &dts_parser.Ident{
                                            Name: "x",
                                            span: 143-144,
                                        },
                                        Type: &dts_parser.TypeReference{
                                            Name: &dts_parser.Ident{
                                                Name: "T",
                                                span: 146-147,
                                            },
                                            span: 146-147,
                                        },
                                        span: 143-147,
                                    },
                                },
                                ReturnType: &dts_parser.PrimitiveType{
                                    Kind: 8,
                                    span: 152-159,
                                },
                                span: 142-159,
                            },
                            span: 131-159,
                        },
                    },
                    ReturnType: &dts_parser.ArrayType{
                        ElementType: &dts_parser.TypeReference{
                            Name: &dts_parser.Ident{
                                Name: "T",
                                span: 162-163,
                            },
                            span: 162-163,
                        },
                        span: 162-165,
                    },
                    span: 121-165,
                },
            },
            declare: true,
            span: 8-170,
        },
    },
}
---

[TestComplexClasses/class_with_all_modifier_combinations - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "AllModifiers",
                span: 14-26,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "prop1",
                        span: 40-45,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 47-53,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                    },
                    span: 40-53,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "prop2",
                        span: 66-71,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 73-79,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                    },
                    span: 66-79,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "prop3",
                        span: 94-99,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 8,
                        span: 101-108,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                    },
                    span: 94-108,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "prop4",
                        span: 120-125,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        span: 127-130,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                    },
                    span: 120-130,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "prop5",
                        span: 144-149,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 12,
                        span: 151-157,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Readonly: true,
                    },
                    span: 144-157,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "prop6",
                        span: 176-181,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 183-189,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                        Static: true,
                    },
                    span: 176-189,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "prop7",
                        span: 211-216,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 218-224,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                        Readonly: true,
                    },
                    span: 211-224,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "prop8",
                        span: 255-260,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 8,
                        span: 262-269,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                        Static: true,
                        Readonly: true,
                    },
                    span: 255-269,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "method1",
                        span: 281-288,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 292-296,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                    },
                    span: 281-296,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "method2",
                        span: 309-316,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 320-324,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                    },
                    span: 309-324,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "method3",
                        span: 339-346,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 350-354,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                    },
                    span: 339-354,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "method4",
                        span: 366-373,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 377-381,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                    },
                    span: 366-381,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "method5",
                        span: 400-407,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 411-415,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                        Static: true,
                    },
                    span: 400-415,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "method6",
                        span: 435-442,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 446-450,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                        Static: true,
                    },
                    span: 435-450,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "method7",
                        span: 472-479,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 483-487,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                        Static: true,
                    },
                    span: 472-487,
                },
            },
            declare: true,
            span: 8-492,
        },
    },
}
---
